// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErorBoundary should not show anything 1`] = `
<div>
  <div />
</div>
`;

exports[`ErorBoundary should show Error notification for user 1`] = `
<div>
  <div
    class="error"
  >
    Something goes wrong, reload the page please to proceed.
  </div>
</div>
`;
